[gd_scene load_steps=48 format=2]

[ext_resource path="res://ASSETS/Art/Grue/grueFront.png" type="Texture" id=1]
[ext_resource path="res://ASSETS/Art/Grue/grueFront2.png" type="Texture" id=2]
[ext_resource path="res://ASSETS/Art/Grue/grueBack.png" type="Texture" id=3]
[ext_resource path="res://SCENES/Boss.gd" type="Script" id=4]
[ext_resource path="res://SCENES/HealthBar.tscn" type="PackedScene" id=5]
[ext_resource path="res://ASSETS/Audio/i_see_you_voice.wav" type="AudioStream" id=6]
[ext_resource path="res://ASSETS/Audio/ghostSpawn.wav" type="AudioStream" id=7]
[ext_resource path="res://ASSETS/Audio/Magic Death.wav" type="AudioStream" id=8]
[ext_resource path="res://ASSETS/Art/Grue/death/death4.png" type="Texture" id=9]
[ext_resource path="res://ASSETS/Art/Grue/death/death1.png" type="Texture" id=10]
[ext_resource path="res://ASSETS/Art/Grue/death/death3.png" type="Texture" id=11]
[ext_resource path="res://ASSETS/Art/Grue/death/death2.png" type="Texture" id=12]
[ext_resource path="res://ASSETS/Art/Grue/death/death11.png" type="Texture" id=13]
[ext_resource path="res://ASSETS/Art/Grue/death/death25.png" type="Texture" id=14]
[ext_resource path="res://ASSETS/Art/Grue/death/death29.png" type="Texture" id=15]
[ext_resource path="res://ASSETS/Art/Grue/death/death16.png" type="Texture" id=16]
[ext_resource path="res://ASSETS/Art/Grue/death/death18.png" type="Texture" id=17]
[ext_resource path="res://ASSETS/Art/Grue/death/death17.png" type="Texture" id=18]
[ext_resource path="res://ASSETS/Art/Grue/death/death23.png" type="Texture" id=19]
[ext_resource path="res://ASSETS/Art/Grue/death/death22.png" type="Texture" id=20]
[ext_resource path="res://ASSETS/Art/Grue/death/death10.png" type="Texture" id=21]
[ext_resource path="res://ASSETS/Art/Grue/death/death14.png" type="Texture" id=22]
[ext_resource path="res://ASSETS/Art/Grue/death/death30.png" type="Texture" id=23]
[ext_resource path="res://ASSETS/Art/Grue/death/death31.png" type="Texture" id=24]
[ext_resource path="res://ASSETS/Art/Grue/death/death20.png" type="Texture" id=25]
[ext_resource path="res://ASSETS/Art/Grue/death/death27.png" type="Texture" id=26]
[ext_resource path="res://ASSETS/Art/Grue/death/death32.png" type="Texture" id=27]
[ext_resource path="res://ASSETS/Art/Grue/death/death8.png" type="Texture" id=28]
[ext_resource path="res://ASSETS/Art/Grue/death/death6.png" type="Texture" id=29]
[ext_resource path="res://ASSETS/Art/Grue/death/death33.png" type="Texture" id=30]
[ext_resource path="res://ASSETS/Art/Grue/death/death12.png" type="Texture" id=31]
[ext_resource path="res://ASSETS/Art/Grue/death/death13.png" type="Texture" id=32]
[ext_resource path="res://ASSETS/Art/Grue/death/death7.png" type="Texture" id=33]
[ext_resource path="res://ASSETS/Art/Grue/death/death19.png" type="Texture" id=34]
[ext_resource path="res://ASSETS/Art/Grue/death/death21.png" type="Texture" id=35]
[ext_resource path="res://ASSETS/Art/Grue/death/death5.png" type="Texture" id=36]
[ext_resource path="res://ASSETS/Art/Grue/death/death26.png" type="Texture" id=37]
[ext_resource path="res://ASSETS/Art/Grue/death/death34.png" type="Texture" id=38]
[ext_resource path="res://ASSETS/Art/Grue/death/death15.png" type="Texture" id=39]
[ext_resource path="res://ASSETS/Art/Grue/death/death9.png" type="Texture" id=40]
[ext_resource path="res://ASSETS/Art/Grue/death/death24.png" type="Texture" id=41]
[ext_resource path="res://ASSETS/Art/Grue/death/death28.png" type="Texture" id=42]
[ext_resource path="res://ASSETS/Art/Grue/death/death35.png" type="Texture" id=43]
[ext_resource path="res://ASSETS/Art/Grue/death/death36.png" type="Texture" id=44]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 1 ), ExtResource( 2 ), ExtResource( 2 ) ],
"loop": true,
"name": "front",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "back",
"speed": 5.0
}, {
"frames": [ ExtResource( 10 ), ExtResource( 12 ), ExtResource( 11 ), ExtResource( 9 ), ExtResource( 36 ), ExtResource( 29 ), ExtResource( 33 ), ExtResource( 28 ), ExtResource( 40 ), ExtResource( 21 ), ExtResource( 13 ), ExtResource( 31 ), ExtResource( 32 ), ExtResource( 22 ), ExtResource( 39 ), ExtResource( 16 ), ExtResource( 18 ), ExtResource( 17 ), ExtResource( 34 ), ExtResource( 25 ), ExtResource( 35 ), ExtResource( 20 ), ExtResource( 19 ), ExtResource( 41 ), ExtResource( 14 ), ExtResource( 37 ), ExtResource( 26 ), ExtResource( 42 ), ExtResource( 15 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 27 ), ExtResource( 30 ), ExtResource( 38 ), ExtResource( 43 ), ExtResource( 44 ) ],
"loop": true,
"name": "death",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 20.577
height = 28.6093

[sub_resource type="CapsuleShape2D" id=3]
radius = 9.6224
height = 19.9672

[node name="Boss" type="Area2D"]
collision_layer = 5
collision_mask = 5
script = ExtResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "front"
speed_scale = 1.3

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 2 )

[node name="HealthBar" parent="." instance=ExtResource( 5 )]
margin_left = -30.8694
margin_top = -44.8106
margin_right = 9.13055
margin_bottom = -4.81062
rect_scale = Vector2( 0.119997, 0.16 )
Max = 500

[node name="Sight" type="Area2D" parent="."]
scale = Vector2( 26.24, 26.24 )

[node name="SightCollider" type="CollisionShape2D" parent="Sight"]
visible = false
rotation = 1.5708
shape = SubResource( 3 )

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="ISeeYou" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )

[node name="GhostSpawn" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )

[node name="death" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )
volume_db = 5.0
[connection signal="area_entered" from="." to="." method="_on_Boss_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_Boss_area_exited"]
[connection signal="body_entered" from="Sight" to="." method="_on_Sight_body_entered"]
[connection signal="body_exited" from="Sight" to="." method="_on_Sight_body_exited"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
